2002-06-25  Dick Porter  <dick@ximian.com>

	* icall.c:
	* process.h:
	* process.c: Process forking and other support functions

2002-06-25  Dick Porter  <dick@ximian.com>

	* image.c (do_mono_image_open): Set ref_count to 1, so that bad
	things dont happen when the image is closed.
	(mono_image_lookup_resource): Walk the resource section looking
	for a particular entry

	* cil-coff.h: PE resource section decoding

2002-06-25  Dick Porter  <dick@ximian.com>
	
	* assembly.h:
	* assembly.c: 
	(mono_assembly_foreach): Accessor functions to walk the list of
	loaded assemblies
	(mono_assembly_set_main):
	(mono_assembly_get_main): Process methods need to know which
	assembly is the "main" one

	* object.c (mono_runtime_run_main): Record the main assembly

	* debug-helpers.c: Fix typo

2002-06-24  Dietmar Maurer  <dietmar@ximian.com>

	* icall.c (ves_icall_System_Runtime_InteropServices_Marshal_copy_to_unmanaged): impl.
	(ves_icall_System_Runtime_InteropServices_Marshal_copy_from_unmanaged): impl.

Sat Jun 22 11:37:25 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* icall.c: fix off-by-one in Assembly.GetTypes() reported by bob@karr.ath.cx.

2002-06-21  Miguel de Icaza  <miguel@ximian.com>

	* image.c (do_mono_image_open): Initialize reference count,
	otherwise we leak the MonoImage.

Fri Jun 21 19:16:47 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* reflection.c: small tweak to handle self-hosting.

Thu Jun 20 23:28:13 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* reflection.c: fix type name parse code.

Thu Jun 20 19:24:32 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* reflection.c: break out of the loop.
	* image.c: special case corlib.

Thu Jun 20 16:43:29 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* reflection.c: add all the custom attrs at the end to ensure the
	ctors have been properly initialized when the attributes are defined
	in the current assembly.

Thu Jun 20 13:46:40 CEST 2002 Paolo Molaro <lupus@ximian.com>
